fix ver